[package]
name = "fhetest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tfhe = { version = "0.3.1", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
gdnative = { version = "0.11", features = ["async"] }
ethers = "2.0.4"
ethers-contract = "2.0.4"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
serde_json = "1.0.96"
futures = "0.3.28"
hex = "0.4.3"
openssl = "0.10.52"
bincode = "1.3.3"
libsodium-sys = "0.2.7"
